# slidex

./: .gitignore  INSTALL_DEPENDENCIES.md  JUST_COMMANDS.md  LICENSE  QUICKSTART.md  README.md  TROUBLESHOOTING.md  WARP.md  env.example  justfile  main.py  pyproject.toml  run_fastapi.sh  spec.md
config/: dev.yaml.example
docs/: INSTALL_DEPENDENCIES.md  JUST_COMMANDS.md  PDF_IMPLEMENTATION_REMAINING.md  PDF_SLICING_APPROACH.md  QUICKSTART.md  SOLUTION_DESIGN.md  TROUBLESHOOTING.md  VLLM_RERANKER.md  WARP.md  spec.md
migrations/: 001_initial_schema.sql  002_add_slide_files.sql  003_add_pdf_support.sql  README.md  init_schema.sql
scripts/: clean_data.py  grant_permissions.py  grant_permissions.sql  init_db.py  rebuild_index.py  setup.sh  setup_dev.sh
slidex/: __init__.py  config.py  logging_config.py
slidex/api/: app.py
slidex/api/routers/: auth.py
slidex/cli/: main.py
slidex/core/: assembler.py  audit_logger.py  auth_service.py  database.py  deps.py  graph_visualizer.py  ingest.py  lightrag_client.py  ollama_client.py  pdf_assembler.py  pdf_processor.py  search.py  slide_processor.py  vector_index.py
slidex/templates/: base.html  decks.html  graph.html  index.html  ingest.html
tests/: test_auth_enforcement.py  test_config.py  test_individual_slide_files.py
